--- a/Consts/MainMultilangConst.zh.resx
+++ b/Consts/MainMultilangConst.zh.resx
@@ -7,7 +7,7 @@
     
     The primary goals of this format is to allow a simple XML format 
     that is mostly human readable. The generation and parsing of the 
-    various data types are done through the TypeConv classes 
+    various data types are done through the TypeConverter classes 
     associated with the data types.
     
     Example:
@@ -32,7 +32,7 @@
     
     Each data row contains a name, and value. The row also contains a 
     type or mimetype. Type corresponds to a .NET class that support 
-    text/value conversion through the TypeConv architecture. 
+    text/value conversion through the TypeConverter architecture. 
     Classes that don't support this are serialized and stored with the 
     mimetype set.
     
@@ -56,7 +56,7 @@
 
     mimetype: application/x-microsoft.net.object.bytearray.base64
     value   : The object must be serialized into a byte array 
-            : using a System.ComponentModel.TypeConv
+            : using a System.ComponentModel.TypeConverter
             : and then encoded with base64 encoding.
     -->
   <xsd:schema id="root" xmlns="" xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns:msdata="urn:schemas-microsoft-com:xml-msdata">
@@ -120,40 +120,40 @@
   <data name="AboutButtonContent" xml:space="preserve">
     <value>关于项目</value>
   </data>
-  <data name="BrowserPathPlaceHolder" xml:space="preserve">
-    <value>(填入任意以 Chromium 为内核的浏览器的路径)</value>
-  </data>
   <data name="EditHostButtonContent" xml:space="preserve">
     <value>编辑规则</value>
   </data>
-  <data name="ExtraArgsPlaceHolder" xml:space="preserve">
+  <data name="SettingsBoxBrowserPathPlaceHolder" xml:space="preserve">
+    <value>(填入任意以 Chromium 为内核的浏览器的路径)</value>
+  </data>
+  <data name="SettingsBoxExtraArgsPlaceHolder" xml:space="preserve">
     <value>(填入任意额外的 Chromium 启动参数)</value>
   </data>
-  <data name="FunctionButtonBrowserPathContent" xml:space="preserve">
+  <data name="SettingsBoxUpstreamUrlPlaceHolder" xml:space="preserve">
+    <value>(填入任意上游伪造规则的链接)</value>
+  </data>
+  <data name="SettingsFunctionButtonBrowserPathContent" xml:space="preserve">
     <value>浏览</value>
   </data>
-  <data name="FunctionButtonExtraArgsContent" xml:space="preserve">
+  <data name="SettingsFunctionButtonExtraArgsContent" xml:space="preserve">
     <value>清除</value>
   </data>
-  <data name="FunctionButtonUpstreamUrlContent" xml:space="preserve">
+  <data name="SettingsFunctionButtonUpstreamUrlContent" xml:space="preserve">
     <value>重置</value>
+  </data>
+  <data name="SettingsModeButtonBrowserPathContent" xml:space="preserve">
+    <value>文件路径 &gt;</value>
+  </data>
+  <data name="SettingsModeButtonExtraArgsContent" xml:space="preserve">
+    <value>额外参数 &gt;</value>
+  </data>
+  <data name="SettingsModeButtonUpstreamUrlContent" xml:space="preserve">
+    <value>上游链接 &gt;</value>
   </data>
   <data name="StartCealButtonContent" xml:space="preserve">
     <value>启动伪造</value>
   </data>
-  <data name="SwitchModeButtonBrowserPathContent" xml:space="preserve">
-    <value>文件路径 &gt;</value>
-  </data>
-  <data name="SwitchModeButtonExtraArgsContent" xml:space="preserve">
-    <value>额外参数 &gt;</value>
-  </data>
-  <data name="SwitchModeButtonUpstreamUrlContent" xml:space="preserve">
-    <value>上游链接 &gt;</value>
-  </data>
   <data name="UpdateHostButtonContent" xml:space="preserve">
     <value>更新规则</value>
-  </data>
-  <data name="UpstreamUrlPlaceHolder" xml:space="preserve">
-    <value>(填入任意上游伪造规则的链接)</value>
   </data>
 </root>
