--- a/Consts/MainMultilangConst.zh.resx
+++ b/Consts/MainMultilangConst.zh.resx
@@ -120,40 +120,70 @@
   <data name="AboutButtonContent" xml:space="preserve">
     <value>关于项目</value>
   </data>
+  <data name="AboutButtonToolTip" xml:space="preserve">
+    <value>点击打开关于窗口</value>
+  </data>
+  <data name="BrowserPathModeName" xml:space="preserve">
+    <value>文件路径</value>
+  </data>
   <data name="EditHostButtonContent" xml:space="preserve">
     <value>编辑规则</value>
   </data>
+  <data name="EditHostButtonToolTip" xml:space="preserve">
+    <value>点击编辑伪造规则</value>
+  </data>
+  <data name="ExtraArgsModeName" xml:space="preserve">
+    <value>额外参数</value>
+  </data>
   <data name="SettingsBoxBrowserPathPlaceHolder" xml:space="preserve">
-    <value>(填入任意以 Chromium 为内核的浏览器的路径)</value>
+    <value>填入任意以 Chromium 为内核的浏览器的路径</value>
   </data>
   <data name="SettingsBoxExtraArgsPlaceHolder" xml:space="preserve">
-    <value>(填入任意额外的 Chromium 启动参数)</value>
+    <value>填入任意额外的 Chromium 启动参数</value>
   </data>
   <data name="SettingsBoxUpstreamUrlPlaceHolder" xml:space="preserve">
-    <value>(填入任意上游伪造规则的链接)</value>
+    <value>填入任意上游伪造规则的链接</value>
   </data>
   <data name="SettingsFunctionButtonBrowserPathContent" xml:space="preserve">
-    <value>浏览</value>
+    <value>浏览路径</value>
   </data>
   <data name="SettingsFunctionButtonExtraArgsContent" xml:space="preserve">
-    <value>清除</value>
+    <value>清除参数</value>
+  </data>
+  <data name="SettingsFunctionButtonToolTip" xml:space="preserve">
+    <value>点击处理输入框内容</value>
   </data>
   <data name="SettingsFunctionButtonUpstreamUrlContent" xml:space="preserve">
-    <value>重置</value>
+    <value>重置链接</value>
   </data>
-  <data name="SettingsModeButtonBrowserPathContent" xml:space="preserve">
-    <value>文件路径 &gt;</value>
-  </data>
-  <data name="SettingsModeButtonExtraArgsContent" xml:space="preserve">
-    <value>额外参数 &gt;</value>
-  </data>
-  <data name="SettingsModeButtonUpstreamUrlContent" xml:space="preserve">
-    <value>上游链接 &gt;</value>
+  <data name="SettingsModeButtonToolTip" xml:space="preserve">
+    <value>点击切换输入框设置模式</value>
   </data>
   <data name="StartCealButtonContent" xml:space="preserve">
     <value>启动伪造</value>
   </data>
+  <data name="StartCealButtonToolTip" xml:space="preserve">
+    <value>点击启动伪造注入后的浏览器</value>
+  </data>
+  <data name="ThemesButtonDarkThemeContent" xml:space="preserve">
+    <value>跟随系统</value>
+  </data>
+  <data name="ThemesButtonInheritThemeContent" xml:space="preserve">
+    <value>暗色模式</value>
+  </data>
+  <data name="ThemesButtonLightThemeContent" xml:space="preserve">
+    <value>亮色模式</value>
+  </data>
+  <data name="ThemesButtonToolTip" xml:space="preserve">
+    <value>点击切换显示主题</value>
+  </data>
   <data name="UpdateHostButtonContent" xml:space="preserve">
     <value>更新规则</value>
+  </data>
+  <data name="UpdateHostButtonToolTip" xml:space="preserve">
+    <value>点击更新伪造规则</value>
+  </data>
+  <data name="UpstreamUrlModeName" xml:space="preserve">
+    <value>上游链接</value>
   </data>
 </root>
