--- a/Consts/MainMultilangConst.resx
+++ b/Consts/MainMultilangConst.resx
@@ -121,28 +121,28 @@
     <value>About Me</value>
   </data>
   <data name="AboutButtonToolTip" xml:space="preserve">
-    <value>Click to open about window</value>
+    <value>Click to open an about window</value>
   </data>
-  <data name="BrowserPathModeName" xml:space="preserve">
+  <data name="BrowserPathSettingsModeName" xml:space="preserve">
     <value>Browser Path</value>
   </data>
   <data name="EditHostButtonContent" xml:space="preserve">
     <value>Edit Host</value>
   </data>
   <data name="EditHostButtonToolTip" xml:space="preserve">
-    <value>Click to edit Cealing Host</value>
+    <value>Click to edit host</value>
   </data>
-  <data name="ExtraArgsModeName" xml:space="preserve">
-    <value>Additional Args</value>
+  <data name="ExtraArgsSettingsModeName" xml:space="preserve">
+    <value>Extra Args</value>
   </data>
-  <data name="SettingsBoxBrowserPathPlaceHolder" xml:space="preserve">
-    <value>Fill in the path of a Chromium-based browser</value>
+  <data name="SettingsBoxBrowserPathToolTip" xml:space="preserve">
+    <value>Fill in a Chromium-based browser path</value>
   </data>
-  <data name="SettingsBoxExtraArgsPlaceHolder" xml:space="preserve">
-    <value>Fill in extra Chromium startup arguments</value>
+  <data name="SettingsBoxExtraArgsToolTip" xml:space="preserve">
+    <value>Fill in extra Chromium startup args</value>
   </data>
-  <data name="SettingsBoxUpstreamUrlPlaceHolder" xml:space="preserve">
-    <value>Fill in the link to an upstream Cealing Host</value>
+  <data name="SettingsBoxUpstreamUrlToolTip" xml:space="preserve">
+    <value>Fill in an upstream host URL</value>
   </data>
   <data name="SettingsFunctionButtonBrowserPathContent" xml:space="preserve">
     <value>Browse Path</value>
@@ -151,28 +151,28 @@
     <value>Clear Args</value>
   </data>
   <data name="SettingsFunctionButtonToolTip" xml:space="preserve">
-    <value>Click to process the contents of the input box</value>
+    <value>Click to process settings</value>
   </data>
   <data name="SettingsFunctionButtonUpstreamUrlContent" xml:space="preserve">
-    <value>Reset Url</value>
+    <value>Reset URL</value>
   </data>
   <data name="SettingsModeButtonToolTip" xml:space="preserve">
-    <value>Click to switch settings mode</value>
+    <value>Click to switch settings</value>
   </data>
   <data name="StartButtonContent" xml:space="preserve">
     <value>Start Cealing</value>
   </data>
   <data name="StartButtonToolTip" xml:space="preserve">
-    <value>Click to launch the injected browser</value>
+    <value>Click to launch an injected browser</value>
   </data>
   <data name="ThemesButtonDarkThemeContent" xml:space="preserve">
-    <value>Light Theme</value>
-  </data>
-  <data name="ThemesButtonInheritThemeContent" xml:space="preserve">
     <value>Auto Theme</value>
   </data>
-  <data name="ThemesButtonLightThemeContent" xml:space="preserve">
+  <data name="ThemesButtonInheritThemeContent" xml:space="preserve">
     <value>Dark Theme</value>
+  </data>
+  <data name="ThemesButtonLightThemeContent" xml:space="preserve">
+    <value>Light Theme</value>
   </data>
   <data name="ThemesButtonToolTip" xml:space="preserve">
     <value>Click to switch themes</value>
@@ -181,9 +181,9 @@
     <value>Update Host</value>
   </data>
   <data name="UpdateHostButtonToolTip" xml:space="preserve">
-    <value>Click to update Cealing Host</value>
+    <value>Click to update host</value>
   </data>
-  <data name="UpstreamUrlModeName" xml:space="preserve">
-    <value>Upstream Url</value>
+  <data name="UpstreamUrlSettingsModeName" xml:space="preserve">
+    <value>Upstream URL</value>
   </data>
 </root>
