--- a/Consts/MainMultilangConst.zh.resx
+++ b/Consts/MainMultilangConst.zh.resx
@@ -123,7 +123,7 @@
   <data name="AboutButtonToolTip" xml:space="preserve">
     <value>点击打开关于窗口</value>
   </data>
-  <data name="BrowserPathModeName" xml:space="preserve">
+  <data name="BrowserPathSettingsModeName" xml:space="preserve">
     <value>文件路径</value>
   </data>
   <data name="EditHostButtonContent" xml:space="preserve">
@@ -132,17 +132,17 @@
   <data name="EditHostButtonToolTip" xml:space="preserve">
     <value>点击编辑伪造规则</value>
   </data>
-  <data name="ExtraArgsModeName" xml:space="preserve">
+  <data name="ExtraArgsSettingsModeName" xml:space="preserve">
     <value>额外参数</value>
   </data>
-  <data name="SettingsBoxBrowserPathPlaceHolder" xml:space="preserve">
-    <value>填入任意以 Chromium 为内核的浏览器的路径</value>
+  <data name="SettingsBoxBrowserPathToolTip" xml:space="preserve">
+    <value>填入任意以 Chromium 为内核的浏览器路径</value>
   </data>
-  <data name="SettingsBoxExtraArgsPlaceHolder" xml:space="preserve">
+  <data name="SettingsBoxExtraArgsToolTip" xml:space="preserve">
     <value>填入任意额外的 Chromium 启动参数</value>
   </data>
-  <data name="SettingsBoxUpstreamUrlPlaceHolder" xml:space="preserve">
-    <value>填入任意上游伪造规则的链接</value>
+  <data name="SettingsBoxUpstreamUrlToolTip" xml:space="preserve">
+    <value>填入任意上游伪造规则链接</value>
   </data>
   <data name="SettingsFunctionButtonBrowserPathContent" xml:space="preserve">
     <value>浏览路径</value>
@@ -151,19 +151,19 @@
     <value>清除参数</value>
   </data>
   <data name="SettingsFunctionButtonToolTip" xml:space="preserve">
-    <value>点击处理输入框内容</value>
+    <value>点击处理设置内容</value>
   </data>
   <data name="SettingsFunctionButtonUpstreamUrlContent" xml:space="preserve">
     <value>重置链接</value>
   </data>
   <data name="SettingsModeButtonToolTip" xml:space="preserve">
-    <value>点击切换输入框设置模式</value>
+    <value>点击切换设置模式</value>
   </data>
   <data name="StartButtonContent" xml:space="preserve">
     <value>启动伪造</value>
   </data>
   <data name="StartButtonToolTip" xml:space="preserve">
-    <value>点击启动伪造注入后的浏览器</value>
+    <value>点击启动参数注入完成的浏览器</value>
   </data>
   <data name="ThemesButtonDarkThemeContent" xml:space="preserve">
     <value>跟随系统</value>
@@ -183,7 +183,7 @@
   <data name="UpdateHostButtonToolTip" xml:space="preserve">
     <value>点击更新伪造规则</value>
   </data>
-  <data name="UpstreamUrlModeName" xml:space="preserve">
+  <data name="UpstreamUrlSettingsModeName" xml:space="preserve">
     <value>上游链接</value>
   </data>
 </root>
