--- a/Consts/AboutMultilangConst.zh.resx
+++ b/Consts/AboutMultilangConst.zh.resx
@@ -97,25 +97,28 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=2.0.3500.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="TermsButtonContent" xml:space="preserve">
-    <value>使用协议</value>
-  </data>
   <data name="DeveloperButtonContent" xml:space="preserve">
     <value>开发者: Space Time</value>
-  </data>
-  <data name="EmailButtonContent" xml:space="preserve">
-    <value>联系邮箱</value>
   </data>
   <data name="DocumentationButtonContent" xml:space="preserve">
     <value>使用文档</value>
   </data>
-  <data name="RepositoryButtonContent" xml:space="preserve">
-    <value>开源地址</value>
+  <data name="EmailButtonContent" xml:space="preserve">
+    <value>联系邮箱</value>
   </data>
   <data name="PolicyButtonContent" xml:space="preserve">
     <value>隐私政策</value>
   </data>
+  <data name="RepositoryButtonContent" xml:space="preserve">
+    <value>开源地址</value>
+  </data>
+  <data name="TermsButtonContent" xml:space="preserve">
+    <value>使用协议</value>
+  </data>
   <data name="VersionButtonLabelContent" xml:space="preserve">
     <value>版本号:</value>
+  </data>
+  <data name="_ReleasePagePasswordLabel" xml:space="preserve">
+    <value>密码:</value>
   </data>
 </root>
