--- a/Consts/AboutMultilangConst.resx
+++ b/Consts/AboutMultilangConst.resx
@@ -117,6 +117,9 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="AgreementsButtonContent" xml:space="preserve">
+    <value>EULA</value>
+  </data>
   <data name="DeveloperButtonContent" xml:space="preserve">
     <value>Dev. Space Time</value>
   </data>
@@ -131,9 +134,6 @@
   </data>
   <data name="RepositoryButtonContent" xml:space="preserve">
     <value>Repo</value>
-  </data>
-  <data name="TermsButtonContent" xml:space="preserve">
-    <value>ToS</value>
   </data>
   <data name="VersionButtonLabelContent" xml:space="preserve">
     <value>Ver.</value>
