--- a/Consts/MainMultilangConst.resx
+++ b/Consts/MainMultilangConst.resx
@@ -189,7 +189,7 @@
   <data name="_BrowserPathDialogFilterFileType" xml:space="preserve">
     <value>Browser</value>
   </data>
-  <data name="_CealingHostErrorHint" xml:space="preserve">
+  <data name="_HostErrorHint" xml:space="preserve">
     <value>The args cannot be recognized, check if the host contains syntax errors</value>
   </data>
   <data name="_HostUtdHint" xml:space="preserve">
