--- a/Consts/MainMultilangConst.zh.resx
+++ b/Consts/MainMultilangConst.zh.resx
@@ -132,6 +132,18 @@
   <data name="EditLocalHostButtonToolTip" xml:space="preserve">
     <value>点击编辑本地规则</value>
   </data>
+  <data name="EditMihomoConfButtonContent" xml:space="preserve">
+    <value>编辑 Mihomo 配置</value>
+  </data>
+  <data name="EditMihomoConfButtonToolTip" xml:space="preserve">
+    <value>点击编辑 Mihomo 配置</value>
+  </data>
+  <data name="EditNginxConfButtonContent" xml:space="preserve">
+    <value>编辑 Nginx 配置</value>
+  </data>
+  <data name="EditNginxConfButtonToolTip" xml:space="preserve">
+    <value>点击编辑 Nginx 配置</value>
+  </data>
   <data name="EditUpstreamHostButtonContent" xml:space="preserve">
     <value>编辑上游规则</value>
   </data>
@@ -152,6 +164,12 @@
   </data>
   <data name="MihomoButtonIsStoppedToolTip" xml:space="preserve">
     <value>点击启动本地 Mihomo</value>
+  </data>
+  <data name="MysteriousButtonContent" xml:space="preserve">
+    <value>神秘按钮</value>
+  </data>
+  <data name="MysteriousButtonToolTip" xml:space="preserve">
+    <value>点击有惊喜</value>
   </data>
   <data name="NginxButtonIsRunningContent" xml:space="preserve">
     <value>停止 Nginx</value>
@@ -219,7 +237,7 @@
   <data name="_BrowserPathDialogFilterFileType" xml:space="preserve">
     <value>浏览器</value>
   </data>
-  <data name="_ConfigErrorHint" xml:space="preserve">
+  <data name="_ConfErrorHint" xml:space="preserve">
     <value>配置无法识别，请检查配置文件中是否含有语法错误</value>
   </data>
   <data name="_HostErrorHint" xml:space="preserve">
