--- a/Consts/MainMultilangConst.zh.resx
+++ b/Consts/MainMultilangConst.zh.resx
@@ -165,12 +165,6 @@
   <data name="MihomoButtonIsStoppedToolTip" xml:space="preserve">
     <value>点击启动本地 Mihomo</value>
   </data>
-  <data name="NoClickButtonContent" xml:space="preserve">
-    <value>不要点击</value>
-  </data>
-  <data name="NoClickButtonToolTip" xml:space="preserve">
-    <value>不要点击这个按钮</value>
-  </data>
   <data name="NginxButtonIsRunningContent" xml:space="preserve">
     <value>停止 Nginx</value>
   </data>
@@ -182,6 +176,18 @@
   </data>
   <data name="NginxButtonIsStoppedToolTip" xml:space="preserve">
     <value>点击启动本地 Nginx</value>
+  </data>
+  <data name="NoClickButtonIsFlashingContent" xml:space="preserve">
+    <value>赶紧点我</value>
+  </data>
+  <data name="NoClickButtonIsFlashingToolTip" xml:space="preserve">
+    <value>赶紧点击这个按钮</value>
+  </data>
+  <data name="NoClickButtonIsStoppedContent" xml:space="preserve">
+    <value>不要点我</value>
+  </data>
+  <data name="NoClickButtonIsStoppedToolTip" xml:space="preserve">
+    <value>不要点击这个按钮</value>
   </data>
   <data name="SettingsBoxBrowserPathToolTip" xml:space="preserve">
     <value>填入任意以 Chromium 为内核的浏览器路径</value>
@@ -239,6 +245,27 @@
   </data>
   <data name="_ConfErrorHint" xml:space="preserve">
     <value>配置无法识别，请检查配置文件中是否含有语法错误</value>
+  </data>
+  <data name="_GameClickOnceMsg" xml:space="preserve">
+    <value>就知道你会点，但其实什么事情都不会发生的。嘻嘻</value>
+  </data>
+  <data name="_GameClickThreeMsg" xml:space="preserve">
+    <value>呜，你在做什么。求求你不要再继续点了，我不想伤害大家。快停下，这是最后一次机会。呃，我快要控制不住了</value>
+  </data>
+  <data name="_GameClickTwiceMsg" xml:space="preserve">
+    <value>不不不，不要点我。对不起，我不该骗你的，我是一个受诅咒的按钮，继续点我会给整个 Sheas Cealer 带来灾难的。请相信我，这不是游戏，这里也没有新功能。听我的，去用正常的功能好吗</value>
+  </data>
+  <data name="_GameEndingMsg" xml:space="preserve">
+    <value>你击败了邪恶的按钮，拯救了 Sheas Cealer，你是英雄</value>
+  </data>
+  <data name="_GameGradeMsg" xml:space="preserve">
+    <value>按钮剩余血量:</value>
+  </data>
+  <data name="_GameReviewEndingMsg" xml:space="preserve">
+    <value>它死了，你是 Sheas Cealer 的英雄</value>
+  </data>
+  <data name="_GameStartMsg" xml:space="preserve">
+    <value>不，求你杀了我，我...控制不住自己了...</value>
   </data>
   <data name="_HostErrorHint" xml:space="preserve">
     <value>规则无法识别，请检查伪造规则中是否含有语法错误</value>
