--- a/Consts/MainMultilangConst.zh.resx
+++ b/Consts/MainMultilangConst.zh.resx
@@ -243,7 +243,7 @@
   <data name="_BrowserPathDialogFilterFileType" xml:space="preserve">
     <value>浏览器</value>
   </data>
-  <data name="_ConfErrorHint" xml:space="preserve">
+  <data name="_ConfErrorMsg" xml:space="preserve">
     <value>配置无法识别，请检查配置文件中是否含有语法错误</value>
   </data>
   <data name="_GameClickOnceMsg" xml:space="preserve">
@@ -267,7 +267,7 @@
   <data name="_GameStartMsg" xml:space="preserve">
     <value>不，求你杀了我，我...控制不住自己了...</value>
   </data>
-  <data name="_HostErrorHint" xml:space="preserve">
+  <data name="_HostErrorMsg" xml:space="preserve">
     <value>规则无法识别，请检查伪造规则中是否含有语法错误</value>
   </data>
   <data name="_KillBrowserProcessPrompt" xml:space="preserve">
@@ -279,10 +279,10 @@
   <data name="_OverrideUpstreamHostPrompt" xml:space="preserve">
     <value>上游规则有更新可用，需要更新吗？否则只为你打开上游规则网页</value>
   </data>
-  <data name="_UpdateUpstreamHostSuccessHint" xml:space="preserve">
+  <data name="_UpdateUpstreamHostSuccessMsg" xml:space="preserve">
     <value>更新已完成</value>
   </data>
-  <data name="_UpstreamHostUtdHint" xml:space="preserve">
+  <data name="_UpstreamHostUtdMsg" xml:space="preserve">
     <value>上游规则已经更到最新了</value>
   </data>
 </root>
